--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 environment:
-  - PYTHON: "C:\\Python34"
-    PYTHON_VERSION: "3.4.1"
-    PYTHON_ARCH: "64"
+  PYTHON: "C:\\Python34"
+  PYTHON_VERSION: "3.4.1"
+  PYTHON_ARCH: "64"
 
 init:
   - "ECHO %PYTHON% %PYTHON_VERSION% %PYTHON_ARCH%"
