--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,15 @@ commands =
     {envpython} scripts/link_pyqt.py --tox {envdir}
     {envpython} -m py.test --strict -rfEsw {posargs}
 
+[testenv:unittests_appveyor]
+setenv = {[testenv:unittests]setenv}
+passenv = {[testenv:unittests]passenv}
+deps = {[testenv:unittests]deps}
+basepython = {env:PYTHON:}\python.exe
+commands =
+    {envpython} scripts/link_pyqt.py --tox {envdir}
+    {envpython} -m py.test --strict -rfEsw {posargs}
+
 [testenv:coverage]
 passenv = DISPLAY XAUTHORITY HOME
 deps =
