--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,15 +3,15 @@ environment:
   PYTHON_VERSION: "3.4.1"
   PYTHON_ARCH: "64"
 
+version: '{branch}-{build}'
+cache: C:\Users\appveyor\pip\wheels
+build: off
+
 init:
   - "ECHO %PYTHON% %PYTHON_VERSION% %PYTHON_ARCH%"
 
 install:
   - "powershell misc\\appveyor_install.ps1"
 
-build: off
-
 test_script:
-  - "%PYTHON%\\Scripts\\tox.exe"
-    #  - "%PYTHON%\\Scripts\\tox.exe -e unittests"
-    #  - "%PYTHON%\\Scripts\\tox.exe -e smoke"
+  - "%PYTHON%\\Scripts\\tox.exe -e unittests_appveyor"
