--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ commands =
 setenv = {[testenv:unittests]setenv}
 passenv = {[testenv:unittests]passenv}
 deps = {[testenv:unittests]deps}
-basepython = {env:PYTHON:}\python.exe
+basepython = C:\Python34\python.exe
 commands =
     {envpython} scripts/link_pyqt.py --tox {envdir}
     {envpython} -m py.test --strict -rfEsw {posargs}
