--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,9 +3,9 @@ cache: C:\Users\appveyor\pip\wheels
 build: off
 
 install:
-  - 'C:\Python34\Scripts\pip.exe' install tox
+  - cmd: 'C:\Python34\Scripts\pip.exe install tox'
   - ps: (new-object net.webclient).DownloadFile('http://sourceforge.net/projects/pyqt/files/PyQt5/PyQt-5.4.1/PyQt5-5.4.1-gpl-Py3.4-Qt5.4.1-x64.exe', 'C:\install-PyQt5.exe')
   - ps: Start-Process -FilePath 'C:\install-PyQt5.exe' -ArgumentList "/S" -Wait -Passthru
 
 test_script:
-  - 'C:\Python34\Scripts\tox.exe' -e unittests_appveyor
+  - 'C:\Python34\Scripts\tox.exe -e unittests_appveyor'
