--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,7 +9,9 @@ install:
   - ps: (new-object net.webclient).DownloadFile('http://sourceforge.net/projects/pyqt/files/PyQt5/PyQt-5.4.1/PyQt5-5.4.1-gpl-Py3.4-Qt5.4.1-x64.exe', 'C:\install-PyQt5.exe')
   - ps: Start-Process -FilePath 'C:\install-PyQt5.exe' -ArgumentList "/S" -Wait -Passthru
   - cmd: 'SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%'
-  - cmd: python -c 'open(r"C:\\Python34\\Scripts\\python3.bat").write(r"@C:\\Python34\\python %*")'
+  - cmd: python -c 'open(r"C:\\Python34\\Scripts\\python3.bat", "w").write(r"@C:\\Python34\\python %*")'
+  - cmd: python -c 'print("\n".join(repr(e) for e in os.walk(r"C:\\Python34")))'
+  - cmd: python -c 'print(open(r"C:\\Python34\\Scripts\\python3.bat", "r").read())'
 
 test_script:
   - 'tox.exe -e unittests'
