--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,13 +2,13 @@ version: '{branch}-{build}'
 cache: C:\Users\appveyor\pip\wheels
 build: off
 environment:
-    PYTHON: "C:\\Python34"
+    PYTHON: 'C:\Python34'
+    PATH: 'C:\Python34;C:\Python34\Scripts;C:\Windows\system32;C:\Windows;C:\Windows\System32\Wbem;C:\Windows\System32\WindowsPowerShell\v1.0\'
 
 install:
   - cmd: 'C:\Python34\Scripts\pip.exe install tox'
   - ps: (new-object net.webclient).DownloadFile('http://sourceforge.net/projects/pyqt/files/PyQt5/PyQt-5.4.1/PyQt5-5.4.1-gpl-Py3.4-Qt5.4.1-x64.exe', 'C:\install-PyQt5.exe')
   - ps: Start-Process -FilePath 'C:\install-PyQt5.exe' -ArgumentList "/S" -Wait -Passthru
-  - cmd: 'SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%'
   - cmd: python -c 'open(r"C:\\Python34\\Scripts\\python3.bat", "w").write(r"@C:\\Python34\\python %*")'
   - cmd: python -c 'print("\n".join(repr(e) for e in os.walk(r"C:\\Python34")))'
   - cmd: python -c 'print(open(r"C:\\Python34\\Scripts\\python3.bat", "r").read())'
