--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,15 +3,13 @@ cache: C:\Users\appveyor\pip\wheels
 build: off
 environment:
     PYTHON: 'C:\Python34'
+    PATH: 'C:\Python34;C:\Python34\Scripts;C:\Windows\system32;C:\Windows;C:\Windows\System32\Wbem;C:\Windows\System32\WindowsPowerShell\v1.0\;C:\Program Files (x86)\Git\cmd'
 
 install:
-  - cmd: python -c 'import os; print(os.environ["PATH"])'
   - cmd: 'C:\Python34\Scripts\pip.exe install tox'
   - ps: (new-object net.webclient).DownloadFile('http://sourceforge.net/projects/pyqt/files/PyQt5/PyQt-5.4.1/PyQt5-5.4.1-gpl-Py3.4-Qt5.4.1-x64.exe', 'C:\install-PyQt5.exe')
   - ps: Start-Process -FilePath 'C:\install-PyQt5.exe' -ArgumentList "/S" -Wait -Passthru
-  - cmd: python -c 'open(r"C:\\Python34\\Scripts\\python3.bat", "w").write(r"@C:\\Python34\\python %*")'
-  - cmd: python -c 'print("\n".join(repr(e) for e in os.walk(r"C:\\Python34")))'
-  - cmd: python -c 'print(open(r"C:\\Python34\\Scripts\\python3.bat", "r").read())'
+  - cmd: python foo.py
 
 test_script:
   - 'tox.exe -e unittests'
